--- a/Server/package.json
+++ b/Server/package.json
@@ -10,12 +10,18 @@
     "start": "npm run build && node build/server.js",
     "debug": "node --inspect-brk ./dist/server.js"
   },
+  "engines": {
+    "node": "10.15.3"
+  },
   "author": "Dapo Adewuyi",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "moment": "^2.24.0",
+    "pg": "^7.10.0",
+    "swagger-jsdoc": "^1.3.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
@@ -30,7 +36,9 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "mocha": "^6.1.4",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.19.0",
+    "nyc": "^14.1.1",
     "request": "^2.88.0"
   }
 }
