--- a/Server/package.json
+++ b/Server/package.json
@@ -35,7 +35,6 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "mocha": "^6.1.4",
-    "nodemon": "^1.19.0",
-    "request": "^2.88.0"
+    "nodemon": "^1.19.0"
   }
 }
