--- a/Server/package.json
+++ b/Server/package.json
@@ -7,6 +7,7 @@
     "test": "mocha --require @babel/register test/test.js --exit",
     "build": "babel server.js --out-dir build",
     "dev-start": "babel-node server.js",
+    "dev": "nodemon --exec babel-node server.js",
     "start": "npm run build && node build/server.js",
     "debug": "node --inspect-brk ./dist/server.js"
   },
@@ -21,7 +22,9 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "validate.js": "^0.12.0",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
