--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "babel server.js --out-dir build",
     "dev-start": "babel-node server.js",
     "dev": "nodemon --exec babel-node server.js",
-    "start": "npm run build && node build/server.js",
+    "start": "babel-node server.js",
     "debug": "node --inspect-brk ./dist/server.js"
   },
   "engines": {
